--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@ ctrlz.website structure:</br>
 </br>
 /students/[student_name] level</br>
 - student's individual index.html page (linking to exhibition.html & root index.html, plus maybe 'previous' & 'next' student?)</br>
-- any media assets,<br>
+- any media assets<br>
