--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-Hello World</br>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Local CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
+    <title>Homepage</title>
+</head>
+
+<body>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <a class="navbar-brand" href="#">
+                <img src="logo/Logo_Green-1.png" width="50" height="50" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Exhibition</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sponsors</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="d-flex justify-content-center m-3 p-3">
+            <h1>BFA CTRL Z</h1>
+        </div>
+
+        <div class="d-flex justify-content-center p-3">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque egestas diam non tortor ullamcorper dictum. Nam pulvinar et velit in finibus. Aenean aliquam ullamcorper ipsum sit amet molestie. Aliquam quis consectetur sapien, id semper justo. Pellentesque
+                imperdiet iaculis quam ac consectetur. Proin venenatis augue a mollis sagittis. In hac habitasse platea dictumst. Integer dictum eget ex vel semper. Suspendisse vel arcu vulputate, euismod ex accumsan, lacinia lacus. Nullam sodales mauris
+                turpis. Pellentesque turpis purus, cursus eget elit ut, scelerisque aliquam ante. Ut quis pellentesque nisl, ac fermentum ligula. Duis pellentesque porta dui, ut viverra tellus semper non. Fusce sit amet turpis enim. Nullam maximus rutrum
+                auctor. Aliquam lobortis feugiat viverra. Sed fringilla libero nulla, quis maximus nibh hendrerit sed. In faucibus est in pretium rutrum. Praesent aliquet elit tortor, eu condimentum purus pharetra varius. Curabitur maximus magna quis
+                aliquam ornare. Cras vestibulum sem quis commodo consequat. Mauris eget turpis sed massa vehicula fermentum. Ut sem dui, porttitor suscipit massa in, pretium porta ante. Morbi varius blandit elementum. end
+            </p>
+        </div>
+    </div>
+
+    <div class="view background-image">
+        <div class="text-center">
+            <h1>Exhibition</h1>
+        </div>
+    </div>
+
+
+    <div class="container d-flex justify-content-center p-3">
+        <div class="row">
+            <div class="col flex-wrap align-items-center justify-content-center m-3 p-3">
+                <img src="images/profile-img.png" width="250" height="250" alt="">
+                <div class="d-flex p-3">
+                    <h6>One of three columns</h6>
+                </div>
+            </div>
+            <div class="col flex-wrap align-items-center justify-content-center m-3 p-3">
+                <img src="images/profile-img.png" width="250" height="250" alt="">
+                <div class="d-flex p-3">
+                    <h6>One of three columns</h6>
+                </div>
+            </div>
+            <div class="col flex-wrap align-items-center justify-content-center m-3 p-3">
+                <img src="images/profile-img.png" width="250" height="250" alt="">
+                <div class="d-flex p-3">
+                    <h6>One of three columns</h6>
+                </div>
+            </div>
+            <div class="col flex-wrap align-items-center justify-content-center m-3 p-3">
+                <img src="images/profile-img.png" width="250" height="250" alt="">
+                <div class="d-flex p-3">
+                    <h6>One of three columns</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+</body>
+
+</html>
