--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Local CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Google Fonts -->
@@ -17,12 +16,11 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-transparent">
+    <nav class="navbar  navbar-expand-lg">
         <a class="navbar-brand" href="#">
             <img src="logo/Logo_Green-1.png" width="50" height="50" alt="">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -45,27 +43,19 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container-fluid">
         <div class="title">
             <h1>BFA CTRL Z</h1>
         </div>
-        <div class="biotext d-flex justify-content-center">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque egestas diam non tortor ullamcorper
-                dictum. Nam pulvinar et velit in finibus. Aenean aliquam ullamcorper ipsum sit amet molestie. Aliquam
-                quis consectetur sapien, id semper justo. Pellentesque
-                imperdiet iaculis quam ac consectetur. Proin venenatis augue a mollis sagittis. In hac habitasse platea
-                dictumst. Integer dictum eget ex vel semper. Suspendisse vel arcu vulputate, euismod ex accumsan,
-                lacinia lacus. Nullam sodales mauris
-                turpis. Pellentesque turpis purus, cursus eget elit ut, scelerisque aliquam ante. Ut quis pellentesque
-                nisl, ac fermentum ligula. Duis pellentesque porta dui, ut viverra tellus semper non. Fusce sit amet
-                turpis enim. Nullam maximus rutrum
-                auctor. Aliquam lobortis feugiat viverra. Sed fringilla libero nulla, quis maximus nibh hendrerit sed.
-                In faucibus est in pretium rutrum. Praesent aliquet elit tortor, eu condimentum purus pharetra varius.
-                Curabitur maximus magna quis
-                aliquam ornare. Cras vestibulum sem quis commodo consequat. Mauris eget turpis sed massa vehicula
-                fermentum. Ut sem dui, porttitor suscipit massa in, pretium porta ante. Morbi varius blandit elementum.
-                end
+        <div class="biotext d-flex">
+            <p class="col-lg-8">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque egestas diam non tortor ullamcorper dictum. Nam pulvinar et velit in finibus. Aenean aliquam ullamcorper ipsum sit amet molestie. Aliquam quis consectetur sapien, id semper justo. Pellentesque
+                imperdiet iaculis quam ac consectetur. Proin venenatis augue a mollis sagittis. In hac habitasse platea dictumst. Integer dictum eget ex vel semper. Suspendisse vel arcu vulputate, euismod ex accumsan, lacinia lacus. Nullam sodales mauris
+                turpis. Pellentesque turpis purus, cursus eget elit ut, scelerisque aliquam ante. Ut quis pellentesque nisl, ac fermentum ligula. Duis pellentesque porta dui, ut viverra tellus semper non. Fusce sit amet turpis enim. Nullam maximus rutrum
+                auctor. Aliquam lobortis feugiat viverra. Sed fringilla libero nulla, quis maximus nibh hendrerit sed. In faucibus est in pretium rutrum. Praesent aliquet elit tortor, eu condimentum purus pharetra varius. Curabitur maximus magna quis
+                aliquam ornare. Cras vestibulum sem quis commodo consequat. Mauris eget turpis sed massa vehicula fermentum. Ut sem dui, porttitor suscipit massa in, pretium porta ante. Morbi varius blandit elementum. end
+            </p>
+            <p class="logo-image col-lg-4"><img src="../../../CTRLZ/CtrlZ Brandpack/Logo/Pngs/Logo_Green 1.png" alt="" class="logo-image" />
             </p>
         </div>
     </div>
@@ -515,19 +505,13 @@
         </div>
     </div>
 
-
+    <footer>Content for New footer Tag Goes Here</footer>
     <!-- Optional JavaScript -->
     <script src="dist/long-press.min.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n "
-        crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js "
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo "
-        crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 "
-        crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
 </body>
 
 </html>
