--- a/individualpage.html
+++ b/individualpage.html
@@ -11,10 +11,25 @@
 <link rel="stylesheet" href="individualpage.css">
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+
 <title>Individual</title>
 </head>
 
 <body>
+	<div class="ui left vertical menu sidebar">
+    <a class="item">
+      Item 1
+    </a>
+    <a class="item">
+      Item 2
+    </a>
+    <a class="item">
+      Item 3
+    </a>
+  </div>
+  
+	
 <nav class="navbar  navbar-expand-lg"> <a class="navbar-brand" href="#"> <img src="logo/Logo_Green-1.png" width="50" height="50" alt=""> </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarNav">
@@ -32,41 +47,54 @@
   </div>
 </nav>
 
+	<div class="pusher">
 <!-- Portfolio Item Row -->
 <div class="row">
-  <div class="col-md-8"> <img class="img-fluid" src="http://placehold.it/750x500" alt=""> </div>
-  <div class="col-md-4">
-    <div class="row">
-      <div class="col-sm-6"><img class="" src="http://placehold.it/150x150" alt=""></div>
-      <div class="col-sm-6 flex align-items-center">
-        <h3>Name, Surname</h3>
+  <div class="col-md-7 d-flex align-items-center justify-content-center"> <img class="img-fluid" src="http://placehold.it/500x500" alt="MAIN PROJECT IMAGE"> </div>
+  <div class="col-md-5 project-info">
+    <div class="row">    
+      <div class="col d-flex align-items-center justify-content-around">
+		  <img class="img-fluid" src="http://placehold.it/150x150" alt="PERSONAL IMAGE">
+		  <h3>Name Surname</h3>
       </div>
     </div>
     <h2>Project Name</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
   </div>
 </div>
 <!-- /.row --> 
 
 <!-- Related Projects Row -->
-<div class="container-fluid">
+<div class="container-fluid container-3">
   <div class="row">
+    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/200x300" alt=""> </a> </div>
     <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
+    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/300x300" alt=""> </a> </div>
     <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
   </div>
   <div class="row">
-    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
+    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x400" alt=""> </a> </div>
+    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/600x300" alt=""> </a> </div>
+    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/400x500" alt=""> </a> </div>
+    <div class="col-md-3 col-sm-6 mb-4"> <a href="#"> <img class="img-fluid" src="http://placehold.it/600x600" alt=""> </a> </div>
   </div>
 </div>
 <!-- /.row -->
 
 </div>
+	</div>
 <!-- /.container -->
 
+	<!-- Optional JavaScript -->
+    <script src="dist/long-press.min.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+	<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+<script src="semantic/dist/semantic.min.js"></script>
 </body>
 </html>
