--- a/individualpage.html
+++ b/individualpage.html
@@ -1,75 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
 
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<!-- Local CSS -->
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="individualpage.css">
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
-<title>Individual</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Local CSS -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="individualpage.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
+    <title>Individual</title>
 </head>
 
 <body>
-<nav class="navbar  navbar-expand-lg"> <a class="navbar-brand" href="#"> <img src="logo/Logo_Green-1.png" width="50" height="50" alt=""> </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active"> <a class="nav-link" href="index.html">
-        <h5>Home </h5>
-        <span class="sr-only">(current)</span> </a> </li>
-      <li class="nav-item"> <a class="nav-link" href="#Exhibition">
-        <h5>Exhibition</h5>
-        </a> </li>
-      <li class=" nav-item"> <a class="nav-link" href="#">
-        <h5>Sponsors</h5>
-        </a> </li>
-    </ul>
-  </div>
-</nav>
-<!-- Portfolio Item Row -->
-<div class="row">
-  <div class="col-md-7 d-flex align-items-center justify-content-center"> <img class="img-fluid" src="http://placehold.it/500x500" alt="MAIN PROJECT IMAGE"> </div>
-  <div class="col-md-5 project-info col-xl-4">
-    <div class="row">
-      <div class="col d-flex align-items-center justify-content-around"> <img class="img-fluid rounded-circle" src="http://placehold.it/150x150" alt="PERSONAL IMAGE">
-        <h3>Name Surname</h3>
-      </div>
+
+    <nav class="navbar navbar-expand-lg navbar-6">
+        <a class="navbar-brand" href="index.html"> <img src="logo/Logo_Green-1.png" width="50" height="50" alt=""> </a>
+        <!-- Collapse button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15" aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent15">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html/#Exhibition">
+                        <h5>Exhibition</h5>
+                    </a>
+                </li>
+                <li class=" nav-item">
+                    <a class="nav-link" href="#">
+                        <h5>Sponsors</h5>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
     </div>
-    <h2>Project Name</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-  </div>
-</div>
-<!-- /.row -->
-<!-- Related Projects Row -->
-<div class="container-fluid container-3">
-  <div class="row d-flex align-items-center justify-content-center">
-    <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center"> <a href="#"> <img class="img-fluid" src="http://placehold.it/200x300" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center"> <a href="#"> <img class="img-fluid" src="http://placehold.it/300x300" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> </div>
-  </div>
-  <div class="row d-flex align-items-center">
-    <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center"> <a href="#"> <img class="img-fluid" src="http://placehold.it/500x400" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center"> <a href="#"> <img class="img-fluid" src="http://placehold.it/600x300" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center"> <a href="#"> <img class="img-fluid" src="http://placehold.it/400x500" alt=""> </a> </div>
-    <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center"> <a href="#"> <img class="img-fluid" src="http://placehold.it/600x600" alt=""> </a> </div>
-  </div>
-</div>
-<!-- /.row -->
-</div>
+	<!--Sticky Sidebar Arrow-->
+	<img class="img-sticky" onclick="openNav()" src="images/left_arro.svg" alt="MAIN PROJECT IMAGE"> 
+    <!-- Portfolio Item Row -->
+    <div class="row">
+        <div class="col-md-7 d-flex align-items-center justify-content-center"> <img class="img-fluid" src="http://placehold.it/500x500" alt="MAIN PROJECT IMAGE"> </div>
+        <div class="col-md-5 project-info col-xl-4">
+            <div class="row">
+                <div class="col d-flex align-items-center justify-content-around"> <img class="img-fluid rounded-circle" src="http://placehold.it/150x150" alt="PERSONAL IMAGE">
+                    <h3>Name Surname</h3>
+                </div>
+            </div>
+            <h2>Project Name</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis
+                enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat,
+                felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis
+                placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu
+                convallis placerat, felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
+                justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris
+                ultricies, justo eu convallis placerat, felis enim.</p>
+        </div>
+    </div>
+    <!-- /.row -->
+    <!-- Related Projects Row -->
+    <div class="container-fluid container-3">
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <a href="#"> <img class="img-fluid" src="http://placehold.it/200x300" alt=""> </a>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <a href="#"> <img class="img-fluid" src="http://placehold.it/300x300" alt=""> </a>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
+            </div>
+        </div>
+        <div class="row d-flex align-items-center">
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x400" alt=""> </a>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <a href="#"> <img class="img-fluid" src="http://placehold.it/600x300" alt=""> </a>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <a href="#"> <img class="img-fluid" src="http://placehold.it/400x500" alt=""> </a>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <a href="#"> <img class="img-fluid" src="http://placehold.it/600x600" alt=""> </a>
+            </div>
+        </div>
+    </div>
+    <!-- /.row -->
 
-<!-- /.container -->
 
-<!-- Optional JavaScript -->
-<script src="dist/long-press.min.js"></script>
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+
+
+    <!-- Optional JavaScript -->
+    <script>
+        function openNav() {
+            document.getElementById("mySidebar").style.width = "300px";
+            document.getElementById("main").style.marginRight = "300px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidebar").style.width = "0";
+            document.getElementById("main").style.marginRight = "0";
+        }
+    </script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
 </body>
+
 </html>
