--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="overvideo">
             <h4>Ctrl Z - BFA Online Exhibition 2020</h4>
-            <a href="index.html"><button type="button" id="buttonvideo"
+            <a href="group_page.html"><button type="button" id="buttonvideo"
                     class="btn btn-outline-dark text-uppercase">Enter Exhibition</button></a>
         </div>
     </div>
