--- a/group_page.html
+++ b/group_page.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav class="navbar  navbar-expand-lg">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="group_page.html">
             <img src="logo/Logo_Green-1.png" width="50" height="50" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,11 +25,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">
-                        <h5>Home </h5><span class="sr-only">(current)</span>
-                    </a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#Exhibition">
                         <h5>Exhibition</h5>
@@ -43,6 +39,7 @@
             </ul>
         </div>
     </nav>
+
     <div class="container-fluid">
         <div class="title">
             <h1>BFA CTRL Z</h1>
@@ -507,11 +504,13 @@
 
     <footer>Content for New footer Tag Goes Here</footer>
     <!-- Optional JavaScript -->
-    <script src="dist/long-press.min.js"></script>
+    <script src="js/choreographer.min.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+
+
 </body>
 
 </html>
