--- a/students/rakel_vella/index.html
+++ b/students/rakel_vella/index.html
@@ -85,8 +85,8 @@
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
                 <a href="https://r4k.buzz/dump-your-data.html" target="_blank"> <img class="img-fluid" src="images/livestream.png" alt=""> </a>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
-                <a href=""> <img class="img-fluid" src="images/V_6.png" alt=""> </a>
+            <div class="col-md-3 col-sm-6 mb-4">
+                <img class="img-fluid" src="images/V_6.png" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
                 <a href="#"> <img class="img-fluid" src="images/video.png" alt=""> </a>
