--- a/group_page.html
+++ b/group_page.html
@@ -42,8 +42,8 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="title">
-            <h1>BFA CTRL Z</h1>
+        <div>
+            <h1 class="title">BFA CTRL Z</h1>
         </div>
         <div class="biotext d-flex">
             <p class="col-lg-8">
@@ -53,7 +53,7 @@
                 auctor. Aliquam lobortis feugiat viverra. Sed fringilla libero nulla, quis maximus nibh hendrerit sed. In faucibus est in pretium rutrum. Praesent aliquet elit tortor, eu condimentum purus pharetra varius. Curabitur maximus magna quis
                 aliquam ornare. Cras vestibulum sem quis commodo consequat. Mauris eget turpis sed massa vehicula fermentum. Ut sem dui, porttitor suscipit massa in, pretium porta ante. Morbi varius blandit elementum. end
             </p>
-            <p class="logo-image col-lg-4"><img src="images/Logo_Green 1.png" alt="" class="logo-image" />
+            <p class="logo-image col-lg-4"><img src="images/logo_gif.gif" alt="" class="logo-image" />
             </p>
         </div>
     </div>
