update to homepage
+added catalogue link

--- a/group_page.html
+++ b/group_page.html
@@ -10,6 +10,7 @@
     <!-- Local CSS -->
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
     <title>Homepage</title>
@@ -57,11 +58,27 @@
             </p>
         </div>
     </div>
-    <div class="container-fluid container-2">
-        <div class="centered">
+
+    <hr>
+    <div class="row d-flex justify-content-center">
+        <div class="col-6">
             <a href="#Exhibition">
+                <h4>EXHIBITION</h4>
+            </a>
+        </div>
+        <div class="col-6">
+            <a href="#">
+                <h4>CATALOGUE</h4>
+            </a>
+        </div>
+    </div>
+    <div class="container-fluid container-2">
+
+        <div class="centered">
+            <!-- <a href="#Exhibition">
                 <h3>Exhibition</h3>
             </a>
+        -->
         </div>
     </div>
     <a name="Exhibition"></a>
@@ -503,7 +520,21 @@
         </div>
     </div>
 
-    <footer>Content for New footer Tag Goes Here</footer>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row d-flex">
+                    <div class="col footer-social d-flex justify-content-center">
+                        <a href="https://www.facebook.com/exhibitionctrlz/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/ctrl.z.bfa/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- Optional JavaScript -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
