--- a/individualpage.html
+++ b/individualpage.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="individualpage.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
-    <title>Individual</title>
+    <title>Student Name | CTRL Z</title>
 </head>
 
 <body>
@@ -75,8 +76,9 @@
                     felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis
                     placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo
                     eu convallis placerat, felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
-                    justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris
-                    ultricies, justo eu convallis placerat, felis enim.</p>
+                    justo eu convallis placerat, felis enim.</p>
+                <hr>
+                <p>External Links</p>
             </div>
         </div>
     </div>
@@ -114,7 +116,19 @@
     </div>
     <!-- /.row -->
 
-
+    <!-- Footer -->
+    <footer>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row d-flex">
+                    <div class="col footer-social d-flex justify-content-center">
+                        <a href="https://www.facebook.com/exhibitionctrlz/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/ctrl.z.bfa/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
