final touches to homepage

--- a/individualpage.html
+++ b/individualpage.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Local CSS -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="individualpage.css">
@@ -22,7 +23,9 @@
     <nav class="navbar navbar-expand-lg navbar-6">
         <a class="navbar-brand" href="index.html"> <img src="logo/Logo_Green-1.png" width="50" height="50" alt=""> </a>
         <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15" aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
+            aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent15">
             <ul class="navbar-nav">
@@ -57,26 +60,168 @@
             <h6>Name, Surname</h6>
             <h5>Title of Project</h5>
         </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
+        <a href="#">
+            <h6>Name, Surname</h6>
+            <h5>Title of Project</h5>
+        </a>
     </div>
     <!--Sticky Sidebar Arrow-->
     <img class="img-sticky" onclick="openNav()" src="images/left_arro.svg" alt="MAIN PROJECT IMAGE">
     <!-- Portfolio Item Row -->
     <div class="container-fluid">
         <div class="row">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="col-md-7 d-flex align-items-center justify-content-center"> <img class="img-fluid" src="http://placehold.it/500x500" alt="MAIN PROJECT IMAGE"> </div>
+            <div data-aos="zoom-in" data-aos-duration="1000"
+                class="col-md-7 d-flex align-items-center justify-content-center"> <img class="img-fluid"
+                    src="http://placehold.it/500x500" alt="MAIN PROJECT IMAGE"> </div>
             <div class="col-md-5 project-info col-xl-4">
                 <div class="row">
-                    <div class="col d-flex align-items-center justify-content-around"> <img class="img-fluid rounded-circle" src="http://placehold.it/150x150" alt="PERSONAL IMAGE">
+                    <div class="col d-flex align-items-center justify-content-around"> <img
+                            class="img-fluid rounded-circle" src="http://placehold.it/150x150" alt="PERSONAL IMAGE">
                         <h3>Name Surname</h3>
                     </div>
                 </div>
                 <h2>Project Name</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis
-                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat,
-                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis
-                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo
-                    eu convallis placerat, felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
-                    justo eu convallis placerat, felis enim.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
+                    Mauris ultricies, justo eu convallis placerat, felis
+                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
+                    Mauris ultricies, justo eu convallis placerat,
+                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+                    gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec
+                    metus. Mauris ultricies, justo eu convallis
+                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
+                    odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum
+                    nec metus. Mauris ultricies, justo
+                    eu convallis placerat, felis enim.</p>
                 <hr>
                 <p>External Links</p>
             </div>
@@ -122,8 +267,10 @@
             <div class="container">
                 <div class="row d-flex">
                     <div class="col footer-social d-flex justify-content-center">
-                        <a href="https://www.facebook.com/exhibitionctrlz/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/ctrl.z.bfa/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/exhibitionctrlz/" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/ctrl.z.bfa/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -147,9 +294,15 @@
         }
     </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n "
+        crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js "
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo "
+        crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 "
+        crossorigin="anonymous "></script>
 </body>
 
 </html>
