--- a/group_page.html
+++ b/group_page.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Local CSS -->
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
-    <title>Homepage</title>
+    <title>BFA CTRL Z</title>
 
 </head>
 
@@ -22,12 +23,12 @@
         <a class="navbar-brand" href="group_page.html">
             <img src="logo/Logo_Green-1.png" width="50" height="50" alt="">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-
                 <li class="nav-item">
                     <a class="nav-link" href="#Exhibition">
                         <h5>Exhibition</h5>
@@ -47,12 +48,23 @@
             <h1 class="title">BFA CTRL Z</h1>
         </div>
         <div class="biotext d-flex">
+            <!-- DESCRIPTION OF EXHIBITION-->
             <p class="col-lg-8">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque egestas diam non tortor ullamcorper dictum. Nam pulvinar et velit in finibus. Aenean aliquam ullamcorper ipsum sit amet molestie. Aliquam quis consectetur sapien, id semper justo. Pellentesque
-                imperdiet iaculis quam ac consectetur. Proin venenatis augue a mollis sagittis. In hac habitasse platea dictumst. Integer dictum eget ex vel semper. Suspendisse vel arcu vulputate, euismod ex accumsan, lacinia lacus. Nullam sodales mauris
-                turpis. Pellentesque turpis purus, cursus eget elit ut, scelerisque aliquam ante. Ut quis pellentesque nisl, ac fermentum ligula. Duis pellentesque porta dui, ut viverra tellus semper non. Fusce sit amet turpis enim. Nullam maximus rutrum
-                auctor. Aliquam lobortis feugiat viverra. Sed fringilla libero nulla, quis maximus nibh hendrerit sed. In faucibus est in pretium rutrum. Praesent aliquet elit tortor, eu condimentum purus pharetra varius. Curabitur maximus magna quis
-                aliquam ornare. Cras vestibulum sem quis commodo consequat. Mauris eget turpis sed massa vehicula fermentum. Ut sem dui, porttitor suscipit massa in, pretium porta ante. Morbi varius blandit elementum. end
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque egestas diam non tortor ullamcorper
+                dictum. Nam pulvinar et velit in finibus. Aenean aliquam ullamcorper ipsum sit amet molestie. Aliquam
+                quis consectetur sapien, id semper justo. Pellentesque
+                imperdiet iaculis quam ac consectetur. Proin venenatis augue a mollis sagittis. In hac habitasse platea
+                dictumst. Integer dictum eget ex vel semper. Suspendisse vel arcu vulputate, euismod ex accumsan,
+                lacinia lacus. Nullam sodales mauris
+                turpis. Pellentesque turpis purus, cursus eget elit ut, scelerisque aliquam ante. Ut quis pellentesque
+                nisl, ac fermentum ligula. Duis pellentesque porta dui, ut viverra tellus semper non. Fusce sit amet
+                turpis enim. Nullam maximus rutrum
+                auctor. Aliquam lobortis feugiat viverra. Sed fringilla libero nulla, quis maximus nibh hendrerit sed.
+                In faucibus est in pretium rutrum. Praesent aliquet elit tortor, eu condimentum purus pharetra varius.
+                Curabitur maximus magna quis
+                aliquam ornare. Cras vestibulum sem quis commodo consequat. Mauris eget turpis sed massa vehicula
+                fermentum. Ut sem dui, porttitor suscipit massa in, pretium porta ante. Morbi varius blandit elementum.
+                end
             </p>
             <p class="logo-image col-lg-4"><img src="images/logo_gif.gif" alt="" class="logo-image" />
             </p>
@@ -67,20 +79,13 @@
             </a>
         </div>
         <div class="col-6">
+            <!-- INSERT LINK TO CATALOGUE -->
             <a href="#">
                 <h4>CATALOGUE</h4>
             </a>
         </div>
     </div>
-    <div class="container-fluid container-2">
-
-        <div class="centered">
-            <!-- <a href="#Exhibition">
-                <h3>Exhibition</h3>
-            </a>
-        -->
-        </div>
-    </div>
+    <div class="container-fluid container-2"></div>
     <hr>
     <a name="Exhibition"></a>
     <div data-aos="fade-up" class="gallery container">
@@ -110,7 +115,6 @@
 
                 </div>
             </div>
-
             <div class="col-md-3 col-6">
                 <div class="d-flex justify-content-center">
                     <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
@@ -528,8 +532,10 @@
             <div class="container">
                 <div class="row d-flex">
                     <div class="col footer-social d-flex justify-content-center">
-                        <a href="https://www.facebook.com/exhibitionctrlz/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/ctrl.z.bfa/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/exhibitionctrlz/" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/ctrl.z.bfa/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -542,9 +548,15 @@
         AOS.init();
     </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n "
+        crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js "
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo "
+        crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 "
+        crossorigin="anonymous "></script>
 
 
 </body>
