added comments + test folder

--- a/students/rakel_vella/index.html
+++ b/students/rakel_vella/index.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../../individualpage.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
-    <title>Individual</title>
+    <title>Rakel Vella | CTRL Z</title>
 </head>
 
 <body>
@@ -62,40 +63,39 @@
         </a>
     </div>
     <!--Sticky Sidebar Arrow-->
-    <img class="img-sticky" onclick="openNav()" src="../../images/left_arro.svg" alt="MAIN PROJECT IMAGE">
+    <img class="img-sticky" onclick="openNav()" src="../../images/left_arro.svg" alt="sidebar arrow">
     <!-- Portfolio Item Row -->
-    <div class="row">
-        <div data-aos="zoom-in" data-aos-duration="1000"
-            class="col-md-7 d-flex align-items-center justify-content-center"> <img class="img-fluid"
-                src="images/main_image.png" alt="MAIN PROJECT IMAGE"> </div>
-        <div class="col-md-5 project-info col-xl-4">
-            <div class="row">
-                <div class="col d-flex align-items-center justify-content-around"> <img
-                        class="img-fluid rounded-circle profile_picture" src="images/profile_picture.png"
-                        alt="PERSONAL IMAGE">
-                    <h3>Rakel Vella</h3>
+    <div class="container-fluid">
+        <div class="row">
+            <div data-aos="zoom-in" data-aos-duration="1000"
+                class="col-md-7 d-flex align-items-center justify-content-center"> <img class="img-fluid"
+                    src="images/main_image.png" alt="MAIN PROJECT IMAGE"> </div>
+            <div class="col-md-5 project-info col-xl-4">
+                <div class="row">
+                    <div class="col d-flex align-items-center justify-content-around"> <img
+                            class="img-fluid rounded-circle profile_picture" src="images/profile_picture.png"
+                            alt="PERSONAL IMAGE">
+                        <h3>Rakel Vella</h3>
+                    </div>
                 </div>
+                <h2>The Glass Box</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
+                    Mauris ultricies, justo eu convallis placerat, felis
+                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
+                    Mauris ultricies, justo eu convallis placerat,
+                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+                    gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec
+                    metus. Mauris ultricies, justo eu convallis
+                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
+                    odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum
+                    nec metus. Mauris ultricies, justo
+                    eu convallis placerat, felis enim.</p>
+                <hr>
+                <!-- External links to social media/websites/etc-->
+                <p>External Links</p>
             </div>
-            <h2>The Glass Box</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque
-                urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
-                justo eu convallis placerat, felis
-                enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris
-                ultricies, justo eu convallis placerat,
-                felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris
-                ultricies, justo eu convallis
-                placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-                gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                Mauris ultricies, justo eu
-                convallis placerat, felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
-                euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et,
-                interdum nec metus. Mauris ultricies,
-                justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing
-                et, interdum nec metus. Mauris
-                ultricies, justo eu convallis placerat, felis enim.</p>
         </div>
     </div>
     <!-- /.row -->
@@ -117,21 +117,42 @@
             </div>
         </div>
         <div class="row d-flex align-items-center">
-            <div class="col-md-4 col-sm-6 mb-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
                 <a href="#"> <img class="img-fluid" src="http://placehold.it/500x400" alt=""> </a>
             </div>
-            <div class="col-md-4 col-sm-6 mb-4 d-flex justify-content-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/600x300" alt=""> </a>
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/a219cU0m24Y" frameborder="1"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-6 mb-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
                 <img class="img-fluid" src="images/V_5.png" alt="">
             </div>
-
+            <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
+                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
+            </div>
         </div>
     </div>
     <!-- /.row -->
 
-
+    <!-- Footer -->
+    <footer>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row d-flex">
+                    <div class="col footer-social d-flex justify-content-center">
+                        <a href="https://www.facebook.com/exhibitionctrlz/" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/ctrl.z.bfa/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
