--- a/students/test/index.html
+++ b/students/test/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Local CSS -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="individualpage.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../individualpage.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
     <!-- Google Fonts -->
@@ -196,7 +196,7 @@
         </a>
     </div>
     <!--Sticky Sidebar Arrow-->
-    <img class="img-sticky" onclick="openNav()" src="images/left_arro.svg" alt="MAIN PROJECT IMAGE">
+    <img class="img-sticky" onclick="openNav()" src="../../images/left_arro.svg" alt="sidebar arrow">
     <!-- Portfolio Item, this is where you will edit.
     Please keep image size under <500kb,
     optimize for web when saving from photoshop/illustrator/lightroom/etc.
@@ -243,7 +243,6 @@
             </div>
         </div>
     </div>
-    <!-- /.row -->
     <!-- Image Grid, this is where you will insert your 8 attachments; images, videos, images as links etc-->
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
@@ -275,7 +274,6 @@
             </div>
         </div>
     </div>
-    <!-- /.row -->
 
     <!-- Footer -->
     <footer>
