--- a/students/test/index.html
+++ b/students/test/index.html
@@ -244,7 +244,11 @@
             </div>
         </div>
     </div>
-    <!-- Image Grid, this is where you will insert your 8 attachments; images, videos, images as links etc-->
+    <!-- Image Grid, this is where you will insert your 8 attachments; images, videos, images as links etc
+    -images will resize themselves to fit into the grid, 
+    make sure that image size is kept under <1mb, preferably under <500kb
+    optimize for web when saving to retain quality
+    -videos should be uploaded to youtube and linked here by using Share>Embed-->
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
