added sponsors page
for now it is empty

--- a/students/test/index.html
+++ b/students/test/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent15">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="group_page.html#Exhibition">
+                    <a class="nav-link" href="../../group_page.html#Exhibition">
                         <h5>Exhibition</h5>
                     </a>
                 </li>
